--- a/mdk02.01/материал/Лабораторное занятие №6 Настройка сети.md
+++ b/mdk02.01/материал/Лабораторное занятие №6 Настройка сети.md
@@ -18,93 +18,103 @@
    - `192.168.0.0/16`  
 
 2. **etcnet**  
-   Etcnet
-**Etcnet** — подсистема управления сетевыми интерфейсами в ALT Linux, позволяющая настраивать сетевые параметры через конфигурационные файлы в каталоге `/etc/net/ifaces/`.
-Более подробно про настройку сети с помощью Etcnet можно почитать [тут](https://www.altlinux.org/Etcnet).
+   **Etcnet** — подсистема управления сетевыми интерфейсами в ALT Linux, позволяющая настраивать сетевые параметры через конфигурационные файлы в каталоге `/etc/net/ifaces/`.  
+   Более подробно про настройку сети с помощью Etcnet можно почитать [тут](https://www.altlinux.org/Etcnet).
 
-Настройки сети могут изменяться либо в ЦУС (модуль Ethernet-интерфейсы), либо напрямую через редактирование файлов /etc/net/ifaces/<интерфейс>.
+   Настройки сети могут изменяться либо в ЦУС (модуль Ethernet-интерфейсы), либо напрямую через редактирование файлов /etc/net/ifaces/<интерфейс>.
 
-Файлы настройки сети для интерфейса enp0s3:
+   Файлы настройки сети для интерфейса enp0s3:
 
-```bash
- ls -1 /etc/net/ifaces/enp0s3
-```
-ipv4address
-ipv4route
-options
-resolv.conf
-где:
+   ```bash
+   ls -1 /etc/net/ifaces/enp0s3
+   ```
+   ipv4address  
+   ipv4route  
+   options  
+   resolv.conf  
+   где:
 
-файл ipv4address — содержит IP-адрес с длиной маски;
-файл ipv4route — содержит маршрут по умолчанию;
-файл options — содержит настройки конфигурации;
-файл resolv.conf — содержит DNS-сервер.
-Пример содержимого файла /etc/net/ifaces/enp0s3/options:
+   - файл ipv4address — содержит IP-адрес с длиной маски;
+   - файл ipv4route — содержит маршрут по умолчанию;
+   - файл options — содержит настройки конфигурации;
+   - файл resolv.conf — содержит DNS-сервер.
 
-BOOTPROTO=dhcp
-TYPE=eth
-NM_CONTROLLED=no
-DISABLED=no
-CONFIG_WIRELESS=no
-SYSTEMD_BOOTPROTO=dhcp4
-CONFIG_IPV4=yes
-SYSTEMD_CONTROLLED=no
-ONBOOT=yes
-CONFIG_IPV6=no
-Параметр BOOTPROTO отвечает за способ получения сетевой картой сетевого адреса и может принимать значения:
+   Пример содержимого файла /etc/net/ifaces/enp0s3/options:
 
-static — адреса и маршруты будут взяты из файлов ipv4address и ipv4route;
-dhcp — интерфейс будет сконфигурирован по DHCP;
-ipv4ll — интерфейс будет сконфигурирован с помощью IPv4LL (link-local). Это значит, что из сети 169.254.0.0/16 (169.254.0.1-169.254.255.254) будет подобран ещё не использованный адрес и назначен на интерфейс.
-Для настройки статического IP-адреса для интерфейса enp0s3 необходимо изменить запись BOOTPROTO=dhcp на BOOTPROTO=static в файле /etc/net/ifaces/enp0s3/option.
+   ```bash
+   BOOTPROTO=dhcp
+   TYPE=eth
+   NM_CONTROLLED=no
+   DISABLED=no
+   CONFIG_WIRELESS=no
+   SYSTEMD_BOOTPROTO=dhcp4
+   CONFIG_IPV4=yes
+   SYSTEMD_CONTROLLED=no
+   ONBOOT=yes
+   CONFIG_IPV6=no
+   ```
+   Параметр BOOTPROTO отвечает за способ получения сетевой картой сетевого адреса и может принимать значения:
 
-Затем нужно задать IP-адрес и маску сети, например 192.168.0.48/255.255.255.0, для этого в файл /etc/net/ifaces/enp0s3/ipv4address запишем параметры соединения:
+   - static — адреса и маршруты будут взяты из файлов ipv4address и ipv4route;
+   - dhcp — интерфейс будет сконфигурирован по DHCP;
+   - ipv4ll — интерфейс будет сконфигурирован с помощью IPv4LL (link-local). Это значит, что из сети 169.254.0.0/16 (169.254.0.1-169.254.255.254) будет подобран ещё не использованный адрес и назначен на интерфейс.
 
-```bash
- echo 192.168.0.48/24 > /etc/net/ifaces/enp0s3/ipv4address
-```
-Примечание: Если файл не существовал, он будет создан, иначе — его содержимое будет перезаписано.
+   Для настройки статического IP-адреса для интерфейса enp0s3 необходимо изменить запись BOOTPROTO=dhcp на BOOTPROTO=static в файле /etc/net/ifaces/enp0s3/option.
 
-Если сетевая карта предполагает наличие двух IP-адресов, то в файл ipv4address следует добавить ещё один адрес (обратите внимание на то, что используется ">>" вместо ">"; с ">" файл перезапишется, с ">>" вывод предыдущей команды будет дописан в конец файла):
+   Затем нужно задать IP-адрес и маску сети, например 192.168.0.48/255.255.255.0, для этого в файл /etc/net/ifaces/enp0s3/ipv4address запишем параметры соединения:
 
-```bash
- echo 192.168.0.148/24 >> /etc/net/ifaces/enp0s3/ipv4address
-```
-Далее запишем в файл /etc/net/ifaces/enp0s3/ipv4route имя шлюза по умолчанию (например, 192.168.0.1):
+   ```bash
+   echo 192.168.0.48/24 > /etc/net/ifaces/enp0s3/ipv4address
+   ```
+   Примечание: Если файл не существовал, он будет создан, иначе — его содержимое будет перезаписано.
 
-```bash
- echo default via 192.168.0.1 > /etc/net/ifaces/enp0s3/ipv4route
-```
-Если необходимо, можно создать файл с описанием dns-сервера /etc/net/ifaces/enp0s3/resolv.conf:
+   Если сетевая карта предполагает наличие двух IP-адресов, то в файл ipv4address следует добавить ещё один адрес (обратите внимание на то, что используется ">>" вместо ">"; с ">" файл перезапишется, с ">>" вывод предыдущей команды будет дописан в конец файла):
 
-```bash
- echo nameserver 192.168.0.9 > /etc/net/ifaces/enp0s3/resolv.conf
-```
-Если у вас два dns (второй, например, 192.168.1.9), то его описание также нужно добавить в этот файл:
+   ```bash
+   echo 192.168.0.148/24 >> /etc/net/ifaces/enp0s3/ipv4address
+   ```
+   Далее запишем в файл /etc/net/ifaces/enp0s3/ipv4route имя шлюза по умолчанию (например, 192.168.0.1):
 
-```bash
- echo nameserver 192.168.1.9 >> /etc/net/ifaces/enp0s3/resolv.conf
-```
-Для применения настроек необходимо перезапустить сеть:
+   ```bash
+   echo default via 192.168.0.1 > /etc/net/ifaces/enp0s3/ipv4route
+   ```
+   Если необходимо, можно создать файл с описанием dns-сервера /etc/net/ifaces/enp0s3/resolv.conf:
 
-```bash
- systemctl restart network
-```
-IP-адрес, маску и шлюз можно изменить командами ip addr {add|change|replace|del } … и ip route {add|del|change|append|replace} …. Например:
+   ```bash
+   echo nameserver 192.168.0.9 > /etc/net/ifaces/enp0s3/resolv.conf
+   ```
+   Если у вас два dns (второй, например, 192.168.1.9), то его описание также нужно добавить в этот файл:
 
-```bash
- ip addr add 192.168.0.140/24 dev enp0s3
-```
-```bash
- ip route add dev enp0s3 192.168.0.240
-```
-Однако эти команды изменяют конфигурацию сети до ближайшей перезагрузки компьютера. Для постоянного изменения нужно отредактировать файлы, о которых говорилось выше.
+   ```bash
+   echo nameserver 192.168.1.9 >> /etc/net/ifaces/enp0s3/resolv.conf
+   ```
+   Для применения настроек необходимо перезапустить сеть:
+
+   ```bash
+   systemctl restart network
+   ```
+   IP-адрес, маску и шлюз можно изменить командами ip addr {add|change|replace|del } … и ip route {add|del|change|append|replace} …. Например:
+
+   ```bash
+   ip addr add 192.168.0.140/24 dev enp0s3
+   ```
+   ```bash
+   ip route add dev enp0s3 192.168.0.240
+   ```
+   Однако эти команды изменяют конфигурацию сети до ближайшей перезагрузки компьютера. Для постоянного изменения нужно отредактировать файлы, о которых говорилось выше.
 
 3. **NetworkManager (nmcli)**  
    Утилита командной строки для управления сетевыми подключениями. Позволяет настраивать интерфейсы, маршруты и DNS.  
 
 4. **NAT (Network Address Translation)**  
    Технология, позволяющая локальной сети использовать один публичный IP для доступа в интернет. Настройка выполняется через `iptables`.  
+
+---
+
+### Стандарты и протоколы  
+- RFC 791: Internet Protocol  
+- RFC 1812: Routing Requirements for IPv4  
+- RFC 3022: Network Address Translator (NAT) Terminology and Considerations  
 
 ---
 
@@ -180,44 +190,66 @@ IP-адрес, маску и шлюз можно изменить команда
    ```  
 
 ---
-3. **Настройка сети на server выполняется аналогично isp**
 
-   Для сервера необходимо задать ip-адрес 192.168.1.3/24, так же не забудьте указать параметры шлюза и dns.
+#### Часть 3: Настройка сети на server  
+**Задача:** Настроить статический IP для сервера.  
 
-
-#### Часть 3: Проверка работоспособности  
-1. **Проверьте связь между машинами:**  
-   - С Server:  
-     ```bash
-     ping 8.8.8.8
-     ```  
-   - С cli:  
-     ```bash
-     ping 8.8.8.8
-     ```  
-
-2. **Проверьте таблицу маршрутизации на Server и cli:**  
+1. **Определите интерфейсы на server**  
    ```bash
-   ip route
+   ip a
    ```  
-   Убедитесь, что шлюзом по умолчанию указан `192.168.1.1`.  
+   - Интерфейс, подключенный к внутренней сети: `eth0` (пример).  
+
+2. **Настройка интерфейса `eth0`**  
+   - Создайте конфигурационные файлы:  
+     ```bash
+     touch /etc/net/ifaces/eth0/ipv4address
+     echo "192.168.1.3/24" > /etc/net/ifaces/eth0/ipv4address
+     ```  
+   - Включите интерфейс:  
+     ```bash
+     systemctl restart network
+     ```  
+
+3. **Проверка работоспособности**  
+   1. **Проверьте связь между машинами:**  
+      - С Server:  
+        ```bash
+        ping 8.8.8.8
+        ```  
+      - С cli:  
+        ```bash
+        ping 8.8.8.8
+        ```  
+
+   2. **Проверьте таблицу маршрутизации на Server и cli:**  
+      ```bash
+      ip route
+      ```  
+      Убедитесь, что шлюзом по умолчанию указан `192.168.1.1`.  
+
+---
+
+### Таблица критериев качества:
+| Параметр | Требование | Контроль |
+|----------|------------|----------|
+| IP-адрес | В пределах 192.168.0.0/16 | Проверка ipcalc |
+| Маска | 255.255.255.0 для сети | Валидация через netmask |
 
 ---
 
 ### Контрольные вопросы  
 1. Какие преимущества имеет статическая адресация перед динамической?  
 2. Для чего используется NAT в данной конфигурации?  
-3. Как проверить таблицу маршрутизации?
+3. Как проверить таблицу маршрутизации?  
 4. Какая команда позволяет просмотреть активные сетевые подключения через `nmcli`?  
 5. Где хранятся конфигурации NetworkManager?  
 6. Как перезагрузить сетевой интерфейс через `nmcli`?  
 7. Что такое IP-маскарадинг и как он реализуется в `iptables`?  
 8. Как изменить DNS-сервер для подключения через `nmcli`?  
 9. Как проверить статус сетевого интерфейса в ALT Linux?  
-10. Что произойдет, если не включить IP-форвардинг на vm1?
-11. Какие параметры содержит файл options?
+10. Что произойдет, если не включить IP-форвардинг на isp?  
+11. Какие параметры содержит файл options?  
 12. Какие файлы отвечают за IP-адрес при использовании etcnet?
 
 ---
-
-**Примечание:** Все изменения сохраняются после перезагрузки. Для автоматического применения iptables добавьте скрипт в автозагрузку (например, через `/etc/rc.local`).
