--- a/mdk02.01/материал/5. лекция№5_Работа_с_интерфейсом_командной_строки.md
+++ b/mdk02.01/материал/5. лекция№5_Работа_с_интерфейсом_командной_строки.md
@@ -1,5 +1,10 @@
 # Тема 1.1. Работа с интерфейсом командной строки
 
+## 📋 Метаданные
+- Тема: Работа с интерфейсом командной строки
+- Компетенции: ПК 2.1, ПК 2.2
+- Время: 80 мин | Связь с практикой: ЛР №2
+
 ## Объем
 2 часа
 
@@ -9,13 +14,20 @@
 
 В этой лекции мы изучим основы работы с командной строкой в ОС «Альт», включая оболочку Bash, структуру файловой системы по стандарту FHS, навигацию по каталогам, работу с файлами и каталогами, текстовые редакторы, а также стандартные потоки и pipeline. Эти навыки являются фундаментальными для успешного администрирования Linux-систем.
 
-**Цели лекции:**
-- Освоить основы работы с интерфейсом командной строки
-- Научиться использовать оболочку Bash эффективно
-- Понимать структуру файловой системы по стандарту FHS
-- Владеть навыками навигации по каталогам и управления файлами
-- Уметь работать с текстовыми редакторами
-- Понимать принципы работы со стандартными потоками и pipeline
+## 🎯 Цели (ФГОС)
+**Знать:** 
+1. Структуру каталогов по стандарту FHS
+2. Принципы работы со стандартными потоками
+3. Основные команды оболочки Bash
+
+**Уметь:** 
+1. Навигировать по файловой системе
+2. Работать с файлами и каталогами
+3. Использовать pipeline для объединения команд
+
+**Владеть:**
+1. Навыками использования текстовых редакторов
+2. Методами поиска файлов и текста
 
 **Задачи лекции:**
 1. Изучить различия между текстовым и графическим интерфейсом
@@ -28,6 +40,12 @@
 8. Научиться использовать pipeline для объединения команд
 
 К концу лекции вы сможете уверенно работать в командной строке, что является необходимым навыком для дальнейшего изучения администрирования ОС «Альт».
+
+## 🔄 Flipped Classroom
+> **Самостоятельно → Аудитория**
+> - Изучить структуру каталогов по стандарту FHS
+> - Практиковаться с основными командами в виртуальной машине
+> - Подготовить вопросы по особенностям командной строки в ALT Linux
 
 ## Текстовый интерфейс пользователя
 
@@ -765,6 +783,7 @@ cat filename
 ```bash
 cat /etc/passwd
 cat /etc/fstab
+cat /etc/altlinux-release  # Проверка версии ALT
 cat document.txt
 ```
 
