--- a/mdk02.01/материал/4. лекция№4_Установка_ОС_Альт_и_базовая_настройка.md
+++ b/mdk02.01/материал/4. лекция№4_Установка_ОС_Альт_и_базовая_настройка.md
@@ -1,5 +1,10 @@
 # Тема 1.1. Установка ОС «Альт» и базовая настройка
 
+## 📋 Метаданные
+- Тема: Установка ОС «Альт» и базовая настройка
+- Компетенции: ПК 2.1, ПК 2.2
+- Время: 80 мин | Связь с практикой: ЛР №7
+
 ## Объем
 2 часа
 
@@ -13,25 +18,28 @@
 
 После установки ОС нужно выполнить базовую настройку: обновить систему, настроить сеть, создать пользователей и т.д. Особое внимание уделим установке в UEFI-режиме, который становится стандартом на современных компьютерах.
 
-**Цели лекции:**
-- Научиться выбирать подходящий дистрибутив ОС «Альт»
-- Освоить подготовку к установке системы
-- Владеть навыками записи установочного носителя
-- Уметь выполнять ручную установку ОС
-- Научиться настраивать систему после установки
-- Понимать особенности установки в UEFI-режиме
+## 🎯 Цели (ФГОС)
+**Знать:** 
+1. Принципы разметки дисков в ALT Linux
+2. Особенности UEFI-установки
+3. Процедуру резервного копирования
 
-**Задачи лекции:**
-1. Изучить требования к аппаратному обеспечению
-2. Освоить резервное копирование данных
-3. Научиться настраивать BIOS/UEFI
-4. Выбрать и скачать подходящий дистрибутив
-5. Записать установочный носитель
-6. Выполнить установку ОС с ручной разметкой дисков
-7. Настроить систему после установки
-8. Понять особенности UEFI-установки
+**Уметь:** 
+1. Выполнять ручную установку ОС
+2. Настроить базовые параметры системы
+3. Обновлять систему через `dist-upgrade`
+
+**Владеть:**
+1. Навыками диагностики ошибок установки
+2. Методами проверки целостности системы
 
 К концу лекции вы сможете самостоятельно установить ОС «Альт» и выполнить начальную настройку.
+
+## 🔄 Flipped Classroom
+> **Самостоятельно → Аудитория**
+> - Ознакомиться с таблицей разделов MBR/GPT
+> - Изучить официальные дистрибутивы ALT Linux (wiki.basealt.ru)
+> - Подготовить USB-носитель с ISO
 
 ## Подготовка к установке ОС «Альт»
 
@@ -614,8 +622,10 @@ umount /mnt
 1. **Обновление системы:**
    - Откройте терминал (Konsole в KDE).
    - Команда: `sudo apt-get update` — обновляет список пакетов.
-   - `sudo apt-get upgrade` — устанавливает обновления.
+   - `sudo apt-get dist-upgrade` — устанавливает обновления с обработкой изменений зависимостей.
    - Перезагрузите после: `sudo reboot`.
+- Проверьте версию: `cat /etc/altlinux-release`  # Проверка версии ALT
+- Подтвердите установку: `rpm -q altlinux-release`  # Проверка установки пакета
 
 2. **Установка дополнительного ПО:**
    - Для офис: `sudo apt-get install libreoffice`.
